FIX css too small

--- a/custom.css
+++ b/custom.css
@@ -13,8 +13,8 @@
 }
 
 .icon {
-  width: 31px;
-  height: 31px;
+  width: 32px;
+  height: 32px;
   transition: filter 1.25s ease;
   text-align: center;
 }
